# comfyui-talksplit

./: INSTALL.py  README.en.md  README.md  __init__.py  pyproject.toml  requirements.txt
src/split/: __init__.py  boundary.py  cli.py  comfy_nodes.py  embedder.py  markers.py  optimizer.py  segmenter.py  visualize.py
src/split.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_comfy_nodes.py  test_features.py  test_segmenter.py
tests/fixtures/: sample_en.txt  sample_zh.txt
workflows/: basic.json  pipeline.json  text_to_image_llm.json
