[project]
name = "split"
version = "0.1.0"
description = "Split speech transcripts into semantically coherent paragraphs."
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7", "matplotlib>=3.7"]

[project.scripts]
talksplit = "split.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
